2011-11-16  Juanma Barranquero  <lekktu@gmail.com>

	* gnus-agent.el (gnus-agent-expire-unagentized-dirs):
	* registry.el (registry-lookup, registry-lookup-breaks-before-lexbind):
	Fix typos.

2011-11-15  Juanma Barranquero  <lekktu@gmail.com>

	* gnus-art.el (gnus-article-part-wrapper):
	* html2text.el (html2text-fix-paragraphs):
	* mm-decode.el (mm-image-fit-p):
	* rfc2047.el (rfc2047-encode-message-header):
	* shr-color.el (shr-color-visible-distance-min)
	(shr-color-relative-to-absolute, set-minimum-interval)
	(shr-color-visible): Fix typos.

2011-11-15  Paul Eggert  <eggert@cs.ucla.edu>

	* gmm-utils.el (gmm-tool-bar-item):
	* gnus-art.el (gnus-treat-body-boundary):
	* gnus-diary.el (gnus-user-format-function-d):
	* gnus-start.el (gnus-get-unread-articles):
	* pgg-gpg.el (pgg-gpg-update-agent):
	* smime.el (smime-cert-by-ldap-1): Spelling fix.

2011-11-14  Paul Eggert  <eggert@cs.ucla.edu>

	* gnus-topic.el (gnus-group-prepare-topics):
	* gnus-uu.el (gnus-extract-view):
	* gnus-win.el (gnus-use-frames-on-any-display): Spelling fix.

2011-11-09  Teodor Zlatanov  <tzz@lifelogs.com>

	* spam.el: Move BBDB autoloads.
	(spam-exists-in-BBDB-p): New function to do the BBDB search directly in
	BBDB 2 and 3.
	(spam-check-BBDB): Use it.
	(spam-enter-ham-BBDB): Use it.

2011-11-09  Paul Eggert  <eggert@cs.ucla.edu>

	* smime.el (smime-draw-buffer): Spelling fix.

2011-10-31  Peter Münster  <pmrb@free.fr>  (tiny change)

	* gnus-group.el (gnus-group-get-new-news): New parameter `one-level'
	for scanning exactly one level.
	* gnus-start.el (gnus-get-unread-articles): Ditto.

2011-11-03  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus-sum.el (gnus-articles-to-read): Change wording in prompt to be
	slightly clearer.

2011-11-03  Teodor Zlatanov  <tzz@lifelogs.com>

	* gnus-sync.el: More commentary about setup.

2011-11-03  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* message.el (message-send-and-exit): Document `arg'.
